--- a/Lab_2_Assignment_WI24.ipynb
+++ b/Lab_2_Assignment_WI24.ipynb
@@ -2033,13 +2033,759 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {
-        "id": "jae4-BLhSvES"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jae4-BLhSvES",
+        "outputId": "85c99e39-d2ff-4163-acea-4efe246d9595"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
+        }
+      ],
       "source": [
-        "# Type code below"
+        "# Type code below\n",
+        "# Sets\n",
+        "set([2, 2, 2, 1, 3, 3])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{2, 2, 2, 1, 3, 3}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Z4wV6BAycRD",
+        "outputId": "d02fef8c-c444-4278-d245-bbf269b19c4f"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# set operations different ways\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {3, 4, 5, 6, 7, 8}"
+      ],
+      "metadata": {
+        "id": "W5Gti32AyhM3"
+      },
+      "execution_count": 97,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.union(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E18-oUfuyquY",
+        "outputId": "4a463a72-21cf-4549-ae4b-14f2307a72fe"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4, 5, 6, 7, 8}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a | b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JakmL8eKytm1",
+        "outputId": "6a638602-ae84-46e6-a09c-efd6642e6c2f"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4, 5, 6, 7, 8}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.intersection(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7WwU5BzGywXV",
+        "outputId": "723a7e85-0039-4671-be5e-a59637ce93ee"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{3, 4, 5}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a & b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2-4p44x_y2B3",
+        "outputId": "2a7a7094-a77c-4094-df3f-dbefe0327503"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{3, 4, 5}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = a.copy()\n",
+        "c |= b\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AT_dOTO_y4NO",
+        "outputId": "d9220d7a-9431-4bd9-9722-bc901ce2f7b0"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4, 5, 6, 7, 8}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = a.copy()\n",
+        "d &= b\n",
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u-5EKp2Ky-Ak",
+        "outputId": "df37459b-c965-4732-e416-77d9bec1d96f"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{3, 4, 5}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# elememts must be immutable and hashable\n",
+        "my_data = [1, 2, 3, 4]\n",
+        "my_set = {tuple(my_data)}\n",
+        "my_set"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dlS-7lfwzCEV",
+        "outputId": "9d29afe5-6293-4609-fc82-3875b46a8f9f"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{(1, 2, 3, 4)}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking subsets and or supersets\n",
+        "a_set = {1, 2, 3, 4, 5}\n",
+        "{1, 2, 3}.issubset(a_set)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aRPGCq-HzN4m",
+        "outputId": "36ca7e5d-5f82-4892-f734-7ac661ce517c"
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_set.issuperset({1, 2, 3})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AVOm5Y7TzWbs",
+        "outputId": "f22337f4-502b-4734-dd7e-93a8369dbd2b"
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Not sure if supposed to do Built-In Sequence Functions but I will anyways. Good to see."
+      ],
+      "metadata": {
+        "id": "TXEzyzJyz6u_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sorted\n",
+        "sorted([7, 1, 2, 6, 0, 3, 2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ncF08Cp00AzB",
+        "outputId": "2113573c-b07b-4413-c211-7dd8b9190727"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 2, 3, 6, 7]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sorted(\"horse race\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gb7tIhZ90Xec",
+        "outputId": "00294675-ab24-40f8-f3cc-8e333e675c13"
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[' ', 'a', 'c', 'e', 'e', 'h', 'o', 'r', 'r', 's']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# zip\n",
+        "seq1 = [\"foo\", \"bar\", \"baz\"]\n",
+        "seq2 = [\"one\", \"two\", \"three\"]\n",
+        "zipped = zip(seq1, seq2)\n",
+        "list(zipped)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KO_JPywv0PfU",
+        "outputId": "5a73cea0-e904-4c00-fffb-a050bb8a600a"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('foo', 'one'), ('bar', 'two'), ('baz', 'three')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seq3 = [False, True]\n",
+        "list(zip(seq1, seq2, seq3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZTzuOT-_0ip8",
+        "outputId": "40a9458f-ca12-4e16-daa9-d2f3039fcdef"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('foo', 'one', False), ('bar', 'two', True)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for index, (a, b) in enumerate(zip(seq1, seq2)):\n",
+        "    print(f\"{index}: {a}, {b}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IMDGQSnT0mvs",
+        "outputId": "45defc8b-fb1f-423d-db03-0d072f49f4ca"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0: foo, one\n",
+            "1: bar, two\n",
+            "2: baz, three\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# reversed\n",
+        "list(reversed(range(10)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GHVPSQnx0qQd",
+        "outputId": "76071114-c34f-4bbe-801e-e83d52f95887"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list set and dic comprehensions\n",
+        "strings = [\"a\", \"as\", \"bat\", \"car\", \"dove\", \"python\"]"
+      ],
+      "metadata": {
+        "id": "tw83UeeJ0yFj"
+      },
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[x.upper() for x in strings if len(x) > 2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LpPlVwjw06X0",
+        "outputId": "3c30b5aa-ebb8-4456-ee1e-8c962c745e5f"
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['BAT', 'CAR', 'DOVE', 'PYTHON']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unique_lengths = {len(x) for x in strings}"
+      ],
+      "metadata": {
+        "id": "2JpvUqwH0-Qz"
+      },
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unique_lengths"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OyDuQ8Ji1CtL",
+        "outputId": "309781ce-87f0-4958-fefe-dee180c74c84"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4, 6}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 117
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# map\n",
+        "set(map(len, strings))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r1f6INRx1D_k",
+        "outputId": "10bc7bfc-1281-41b0-ff0b-0fd4e6521923"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4, 6}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 118
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loc_mapping = {val: index for index, val in enumerate(strings)}\n",
+        "loc_mapping"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VBHxTk0V1JMl",
+        "outputId": "235ecc36-2b00-4c29-fda1-9ff0c1b365e1"
+      },
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 0, 'as': 1, 'bat': 2, 'car': 3, 'dove': 4, 'python': 5}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# nested list comprehensions\n",
+        "all_data = [[\"John\", \"Emily\", \"Michael\", \"Mary\", \"Steven\"],\n",
+        "            [\"Maria\", \"Juan\", \"Javier\", \"Natalia\", \"Pilar\"]]"
+      ],
+      "metadata": {
+        "id": "9cgGiuVv1MvM"
+      },
+      "execution_count": 120,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names_of_interest = []\n",
+        "for names in all_data:\n",
+        "    enough_es = [name for name in names if name.count(\"a\") >= 2]\n",
+        "    names_of_interest.extend(enough_es)"
+      ],
+      "metadata": {
+        "id": "GZMri2GD1Sql"
+      },
+      "execution_count": 122,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names_of_interest"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MxZOG8Za1cxM",
+        "outputId": "0286cd3b-4581-481e-98f3-f84d8d88ed25"
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Maria', 'Natalia']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# making it more concise\n",
+        "result = [name for names in all_data for name in names\n",
+        "          if name.count(\"a\") >= 2]"
+      ],
+      "metadata": {
+        "id": "gEulp3y41fDX"
+      },
+      "execution_count": 124,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "44KkavQB1kpN",
+        "outputId": "571d2a76-14d5-49c6-9e19-a5e85ab21845"
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Maria', 'Natalia']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 125
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "some_tuples = [(1, 2, 3), (4, 5, 6), (7, 8, 9)]\n",
+        "flattened = [x for tup in some_tuples for x in tup]\n",
+        "flattened"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pAx1dT7S1mpD",
+        "outputId": "e30dcca0-e8f3-4277-eeb5-409d07910686"
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[[x for x in tup] for tup in some_tuples]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WPXHSyyu1qWw",
+        "outputId": "ebb0c590-1540-4229-8a87-3ea91c9f8e7d"
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
       ]
     },
     {
