--- a/Lab_2_Assignment_WI24.ipynb
+++ b/Lab_2_Assignment_WI24.ipynb
@@ -2808,13 +2808,617 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 128,
       "metadata": {
         "id": "ZGUL6yOkSvES"
       },
       "outputs": [],
       "source": [
-        "# Type code below"
+        "# Type code below\n",
+        "# Functions and output and assignment\n",
+        "def my_function(x, y):\n",
+        "    return x + y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_function(1, 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gW4KDjAH1_b1",
+        "outputId": "1d7c6bac-9b22-4e19-aa6b-778cf2ee7aed"
+      },
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 129
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = my_function(1, 2)\n",
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iXIIZUis2BiO",
+        "outputId": "f42e0322-a86c-45a8-ebe4-56ce0b3d45d5"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def function_without_return(x):\n",
+        "    print(x)"
+      ],
+      "metadata": {
+        "id": "e-bUvk2w2EGs"
+      },
+      "execution_count": 131,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = function_without_return(\"hello!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UqTOguVR2K4c",
+        "outputId": "8facea02-7fd3-4685-f095-2d23787a9551"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Mn5-Sog2OV2",
+        "outputId": "86cbc1b0-14d4-460e-e226-44125a920e42"
+      },
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def my_function2(x, y, z=1.5):\n",
+        "    if z > 1:\n",
+        "        return z * (x + y)\n",
+        "    else:\n",
+        "        return z / (x + y)"
+      ],
+      "metadata": {
+        "id": "5EhcVeTK2QY8"
+      },
+      "execution_count": 134,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_function2(5, 6, z=0.7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IKjftoWm2WKZ",
+        "outputId": "d9a9b149-da1a-46c0-c894-98f376ce913b"
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.06363636363636363"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_function2(3.14, 7, 3.5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dtApHbeF2agO",
+        "outputId": "19a57151-c779-401d-e4de-4a0a7de29c5a"
+      },
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "35.49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_function2(10, 20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PWYwpJa_2c2v",
+        "outputId": "079fb9f1-6c92-4394-c23c-c155bb1ff012"
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "45.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Namespaces, scope, and local functions\n",
+        "def func():\n",
+        "    a = []\n",
+        "    for i in range(5):\n",
+        "        a.append(i)"
+      ],
+      "metadata": {
+        "id": "JOkPY_wD2eq-"
+      },
+      "execution_count": 138,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = []\n",
+        "def func():\n",
+        "    for i in range(5):\n",
+        "        a.append(i)"
+      ],
+      "metadata": {
+        "id": "o2pnSVOW2mU1"
+      },
+      "execution_count": 139,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "func()\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hDfpzv1H2oyj",
+        "outputId": "a3829946-de28-424f-f496-56a80b397a07"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "func()\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ezTD5g-s2sc5",
+        "outputId": "eb14825e-696d-49e2-8241-713769ad8cdb"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 0, 1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 141
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# globan and nonlocal keywords\n",
+        "a = None\n",
+        "def bind_a_variable():\n",
+        "    global a\n",
+        "    a = []\n",
+        "bind_a_variable()\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fxLa4dIm2xU-",
+        "outputId": "9bcdbc69-59a6-427a-98e9-c2b22c6c1733"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# returen multiple values\n",
+        "# Just wanted to see this and how it worked\n",
+        "def f():\n",
+        "    a = 5\n",
+        "    b = 6\n",
+        "    c = 7\n",
+        "    return a, b, c\n",
+        "\n",
+        "a, b, c = f()"
+      ],
+      "metadata": {
+        "id": "pPrVQtU33Pcl"
+      },
+      "execution_count": 143,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "return_value = f()"
+      ],
+      "metadata": {
+        "id": "mZ_NRF943WcR"
+      },
+      "execution_count": 144,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(return_value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r1QKNAWI3bjN",
+        "outputId": "34f89569-c8fb-484d-d49e-73db7dd9367e"
+      },
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(5, 6, 7)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# functions are objects\n",
+        "states = [\"   Alabama \", \"Georgia!\", \"Georgia\", \"georgia\", \"FlOrIda\",\n",
+        "          \"south   carolina##\", \"West virginia?\"]"
+      ],
+      "metadata": {
+        "id": "hHeAufyc3eKW"
+      },
+      "execution_count": 146,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "def clean_strings(strings):\n",
+        "    result = []\n",
+        "    for value in strings:\n",
+        "        value = value.strip()\n",
+        "        value = re.sub(\"[!#?]\", \"\", value)\n",
+        "        value = value.title()\n",
+        "        result.append(value)\n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "GD5ylHXQ3zhT"
+      },
+      "execution_count": 147,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clean_strings(states)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AYGRwYks5IGk",
+        "outputId": "9d6b5536-1ede-4113-fb6e-b32e38d0ac99"
+      },
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Alabama',\n",
+              " 'Georgia',\n",
+              " 'Georgia',\n",
+              " 'Georgia',\n",
+              " 'Florida',\n",
+              " 'South   Carolina',\n",
+              " 'West Virginia']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# another way\n",
+        "def remove_punctuation(value):\n",
+        "    return re.sub(\"[!#?]\", \"\", value)\n",
+        "\n",
+        "clean_ops = [str.strip, remove_punctuation, str.title]\n",
+        "def clean_strings(strings, ops):\n",
+        "    result = []\n",
+        "    for value in strings:\n",
+        "        for function in clean_ops:\n",
+        "            value = function(value)\n",
+        "        result.append(value)\n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "jauHxRBI5LAs"
+      },
+      "execution_count": 149,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clean_strings(states, clean_ops)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zjUnIXFx5brP",
+        "outputId": "34bbe890-3f4a-483b-e38f-d7a839ad8796"
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Alabama',\n",
+              " 'Georgia',\n",
+              " 'Georgia',\n",
+              " 'Georgia',\n",
+              " 'Florida',\n",
+              " 'South   Carolina',\n",
+              " 'West Virginia']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 150
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# functional pattern\n",
+        "for x in map(remove_punctuation, states):\n",
+        "    print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aJwUFrjA5eHG",
+        "outputId": "cefb3a5c-6776-46f3-f316-d7bf83f87b59"
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Alabama \n",
+            "Georgia\n",
+            "Georgia\n",
+            "georgia\n",
+            "FlOrIda\n",
+            "south   carolina\n",
+            "West virginia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# lamba functions\n",
+        "def short_function(x):\n",
+        "    return x * 2\n",
+        "\n",
+        "equiv_anon = lambda x: x * 2"
+      ],
+      "metadata": {
+        "id": "VShvwJ0p5z-I"
+      },
+      "execution_count": 152,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def apply_to_list(some_list, f):\n",
+        "    return [f(x) for x in some_list]\n",
+        "\n",
+        "ints = [4, 0, 1, 5, 6]\n",
+        "apply_to_list(ints, lambda x: x * 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qkmrm2yh57yX",
+        "outputId": "db41cc7a-0889-491b-da11-925d0132c396"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[8, 0, 2, 10, 12]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 153
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strings = [\"foo\", \"card\", \"bar\", \"aaaa\", \"abab\"]"
+      ],
+      "metadata": {
+        "id": "VOgIyHR06C-6"
+      },
+      "execution_count": 154,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strings.sort(key=lambda x: len(set(x)))\n",
+        "strings"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JHf7ywYN6Fa0",
+        "outputId": "d7924f4d-7939-44fc-dca0-f8581cd2c623"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['aaaa', 'foo', 'abab', 'bar', 'card']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 155
+        }
       ]
     },
     {
